added the pages

--- a/solemate_project/solemate_app/solemate/templates/solemate/results.html
+++ b/solemate_project/solemate_app/solemate/templates/solemate/results.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Solemate Page</title>
+    <title>My Results Page</title>
 </head>
 <body>
-<h1>Welcome to My Solemate Page</h1>
+<h1>Welcome to My Results Page</h1>
 <button onclick="location.href='{% url 'index' %}'">Home</button>
 <button onclick="location.href='{% url 'results' %}'">Results</button>
 </body>
 </html>
-
