--- a/solemate_project/solemate_app/solemate/templates/solemate/results.html
+++ b/solemate_project/solemate_app/solemate/templates/solemate/results.html
@@ -14,24 +14,22 @@
         }
 
         .ellipse {
-            width: 1500px;       /* Adjust the width as needed */
-            height: 1098px;       /* Adjust the height as needed */
-            position: absolute;
-            left: -350px;
-            top: -250px;
+            width: 1506px;       /* Adjust the width as needed */
+            height: 1102px;       /* Adjust the height as needed */
+            position: fixed;
+            left: -308.76px;
+            top: -258.56px;
             background-color: #98C1D9; /* Background color */
             border-radius: 50%;  /* 50% rounded corners */
         }
 
-        header {
-            padding: 10px;
-            align-content: center;
-            justify-content: center;
-            font-size: 24px;
+        .title {
+            font-size: 50px;
             color: #ffffff;
-            height: 200px;
             font-weight: 700;
-            margin: 20px 16px;
+            position: fixed;
+            left: 35px;
+            top: 28px;
         }
 
         footer {
@@ -51,7 +49,7 @@
             cursor: pointer;
             position: absolute;
             left: 146px;
-            bottom: 50px;
+            bottom: 60px;
             width: 70px;
             height: 65px;
         }
@@ -63,7 +61,7 @@
             margin: 0;
             cursor: pointer;
             position: absolute;
-            left: 567.3px;
+            left: 570px;
             bottom: 50px;
             width: 80.3px;
             height: 75.3px;
@@ -71,8 +69,8 @@
 
         .mail-button {
             position: absolute;
-            left: 369px;
-            bottom: 50px;
+            left: 360px;
+            bottom: 60px;
             width: 75.3px;
             height: 62.76px;
         }
@@ -80,7 +78,7 @@
         .profile-button {
             position: absolute;
             left: 788.2px;
-            bottom: 50px;
+            bottom: 55px;
             width: 75.3px;
             height: 75.3px;
         }
@@ -96,27 +94,27 @@
     </style>
 </head>
 <body>
-<header>
-    <h1>Solemate</h1>
-</header>
-<!--    <div class="ellipse"></div>-->
-<div class="shopping-button">
-    <img src="../../assets/icons/shopping.svg">
-</div>
-<footer>
-    <button onclick="location.href='{% url 'index' %}'" class="card-button">
-        <img src="../../assets/icons/light-card.svg" alt="cards">
-    </button>
-    <div class="mail-button">
-        <img src="../../assets/icons/mail.svg">
+    <div class="ellipse"></div>
+    <h1 class="title">
+        Solemate
+    </h1>
+    <div class="shopping-button">
+        <img src="../../assets/icons/shopping.svg">
     </div>
-    <button onclick="location.href='{% url 'results' %}'" class="heart-button">
-        <img src="../../assets/icons/dark-hearted.svg" alt="hearted">
-    </button>
-    <div class="profile-button">
-        <img src="../../assets/icons/profile.svg">
-    </div>
-</footer>
+    <footer>
+        <button onclick="location.href='{% url 'index' %}'" class="card-button">
+            <img src="../../assets/icons/light-card.svg" alt="cards">
+        </button>
+        <div class="mail-button">
+            <img src="../../assets/icons/mail.svg">
+        </div>
+        <button onclick="location.href='{% url 'results' %}'" class="heart-button">
+            <img src="../../assets/icons/dark-hearted.svg" alt="hearted">
+        </button>
+        <div class="profile-button">
+            <img src="../../assets/icons/profile.svg">
+        </div>
+    </footer>
 </body>
 </html>
 
