added page indicator

--- a/solemate_project/solemate_app/solemate/templates/solemate/index.html
+++ b/solemate_project/solemate_app/solemate/templates/solemate/index.html
@@ -157,6 +157,39 @@
             text-align: center;
         }
 
+        .lines {
+            width: 37.65px;
+            height: 1px;
+            position: absolute;
+            top: 1383.2px;
+        }
+
+        .line1 {
+            position: absolute;
+            left: 369px;
+
+        }
+
+        .line2 {
+            position: absolute;
+            left: 419.2px;
+        }
+
+        .line3 {
+            position: absolute;
+            left: 467px;
+        }
+
+        .line4 {
+            position: absolute;
+            left: 517.1px;
+        }
+
+        .line5 {
+            position: absolute;
+            left: 569.8px;
+        }
+
     </style>
 </head>
 <body>
@@ -174,6 +207,21 @@
 <!--    THIS IS FOR THE CAPTION UNDERNEATH FOR THE BRAND AND TYPE OF SHOE-->
     <p class="shoe-caption">BRAND SHOE TYPE</p>
 
+    <div class="line1 lines">
+        <img src="../../assets/icons/line1.svg">
+    </div>
+    <div class="line2 lines">
+        <img src="../../assets/icons/line2.svg">
+    </div>
+    <div class="line3 lines">
+        <img src="../../assets/icons/line2.svg">
+    </div>
+    <div class="line4 lines">
+        <img src="../../assets/icons/line2.svg">
+    </div>
+    <div class="line5 lines">
+        <img src="../../assets/icons/line2.svg">
+    </div>
 
     <div class="pic-buttons">
         <button class="no">
