--- a/solemate_two/pages/templates/pages/results.html
+++ b/solemate_two/pages/templates/pages/results.html
@@ -99,20 +99,20 @@
         Solemate
     </h1>
     <div class="shopping-button">
-        <img src="/assets/icons/shopping.svg">
+        <img src="/static/icons/shopping.svg">
     </div>
     <footer>
         <button onclick="location.href='{% url 'index' %}'" class="card-button">
-            <img src="/assets/icons/light-card.svg" alt="cards">
+            <img src="/static/icons/light-card.svg" alt="cards">
         </button>
         <div class="mail-button">
-            <img src="/assets/icons/mail.svg">
+            <img src="/static/icons/mail.svg">
         </div>
         <button onclick="location.href='{% url 'results' %}'" class="heart-button">
-            <img src="/assets/icons/dark-hearted.svg" alt="hearted">
+            <img src="/static/icons/dark-hearted.svg" alt="hearted">
         </button>
         <div class="profile-button">
-            <img src="/assets/icons/profile.svg">
+            <img src="/static/icons/profile.svg">
         </div>
     </footer>
 </body>
